# daggy

./: .clang-format  .gitignore  .hgignore  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  DaggyProject.pro  DataAgregatorProject.pro  GeneralSettings.pri  LICENSE  README.md  conanfile.py  da_test_linux.json  da_test_windows.yaml  daggycore_export.h  git_version.py  requirements.txt  test_linux.json  test_linux.yaml  test_linux_ssh.json  test_linux_ssh.yaml  test_windows.json
.circleci/: config.yml
Daggy/: CApplicationSettings.cpp  CApplicationSettings.h  CConsoleDaggy.cpp  CConsoleDaggy.h  CConsoleDataAgregator.h  CFileDataAggregator.cpp  CFileDataAggregator.h  CFileDataSourcesReciever.cpp  CFileDataSourcesReciever.h  CMakeLists.txt  Common.h  Daggy.pro  Precompiled.h  daggy.rc  main.cpp  simple_multiple_servers.yaml
DaggyCore/: CDaggy.cpp  CDaggy.h  CDataAgregator.cpp  CDataAgregator.h  CDataSourcesFabric.cpp  CDataSourcesFabric.h  CDefaultRemoteServersFabric.cpp  CDefaultRemoteServersFabric.h  CJsonDataSourcesConvertor.cpp  CJsonDataSourcesConvertor.h  CLocalDataProvidersFabric.h  CLocalRemoteServer.cpp  CLocalRemoteServer.h  CMakeLists.txt  CSsh2DataProvider.cpp  CSsh2DataProvider.h  CSsh2DataProviderFabric.cpp  CSsh2DataProviderFabric.h  CSshRemoteServer.cpp  CSshRemoteServer.h  CYamlDataSourcesConvertor.cpp  CYamlDataSourcesConvertor.h  Command.h  Common.cpp  Common.h  DaggyCore.cpp  DaggyCore.h  DaggyCore.pro  DataSource.h  DataSourcesTypes.h  IDataAggregator.cpp  IDataAggregator.h  IDataProvider.cpp  IDataProvider.h  IDataProviderFabric.cpp  IDataProviderFabric.h  IDataSourceConvertor.cpp  IDataSourceConvertor.h  IDataSourcesConvertor.cpp  IDataSourcesConvertor.h  (+24 more)
DataAgregator/: CApplicationSettings.cpp  CApplicationSettings.h  CConsoleDataAgregator.cpp  CConsoleDataAgregator.h  CFileDataSourcesReciever.cpp  CFileDataSourcesReciever.h  DataAgregator.pro  ISystemSignalsHandler.h  ISystemSignalsHandlerUnix.cpp  ISystemSignalsHandlerWin32.cpp  Precompiled.h  dataagregator.rc  main.cpp
DataAgregatorCore/: CDataAgregator.cpp  CDataAgregator.h  CDataSources.cpp  CDataSources.h  CDataSourcesFabric.cpp  CDataSourcesFabric.h  CDefaultRemoteServersFabric.cpp  CDefaultRemoteServersFabric.h  CLocalRemoteServer.cpp  CLocalRemoteServer.h  CRemoteCommand.cpp  CRemoteCommand.h  CSourceServer.cpp  CSourceServer.h  CSourceServerAuthorization.cpp  CSourceServerAuthorization.h  CSourceServerCommand.cpp  CSourceServerCommand.h  CSourceServerSshConnection.cpp  CSourceServerSshConnection.h  CSshRemoteServer.cpp  CSshRemoteServer.h  CSshRemoteServer.h.autosave  CSshServersFabric.cpp  CSshServersFabric.h  DataAgregatorCore.pro  DataAgregatorCore.pro.autosave  DataSource.cpp  DataSource.h  DataSourcesTypes.h  IDataSourcesReciever.cpp  IDataSourcesReciever.h  IDataSourcesSender.h  IRemoteAgregator.cpp  IRemoteAgregator.h  IRemoteAgregatorReciever.cpp  IRemoteAgregatorReciever.h  IRemoteServer.cpp  IRemoteServer.h  IRemoteServer.h.autosave  (+9 more)
QSshLib/: .directory  Precompiled.h  QSshLib.pro  sftpchannel.cpp  sftpchannel.h  sftpchannel_p.h  sftpdefs.cpp  sftpdefs.h  sftpincomingpacket.cpp  sftpincomingpacket_p.h  sftpoperation.cpp  sftpoperation_p.h  sftpoutgoingpacket.cpp  sftpoutgoingpacket_p.h  sftppacket.cpp  sftppacket_p.h  ssh_global.h  sshbotanconversions_p.h  sshcapabilities.cpp  sshcapabilities_p.h  sshchannel.cpp  sshchannel_p.h  sshchannelmanager.cpp  sshchannelmanager_p.h  sshconnection.cpp  (+31 more)
src/: CMakeLists.txt  Doxyfile  LICENSE
src/Daggy/: CConsoleDaggy.cpp  CConsoleDaggy.h  CConsoleDaggy.hpp  CFileDataAggregator.cpp  CFileDataAggregator.h  CMakeLists.txt  Common.cpp  Common.h  ISystemSignalHandler.h  ISystemSignalHandlerUnix.cpp  ISystemSignalHandlerWin32.cpp  Precompiled.h  Precompiled.hpp  main.cpp  simple_multiple_servers.json  simple_multiple_servers.yaml  simple_sources.yaml  version.rc
src/DaggyCore/: CJsonDataSourcesConvertor.cpp  CJsonDataSourcesConvertor.h  CJsonDataSourcesConvertor.hpp  CLocalDataProvider.cpp  CLocalDataProvider.h  CLocalDataProvider.hpp  CLocalDataProvidersFabric.cpp  CLocalDataProvidersFabric.h  CLocalDataProvidersFabric.hpp  CMakeLists.txt  CSsh2DataProvider.cpp  CSsh2DataProvider.h  CSsh2DataProvider.hpp  CSsh2DataProviderFabric.cpp  CSsh2DataProviderFabric.h  CSsh2DataProviderFabric.hpp  CYamlDataSourcesConvertor.cpp  CYamlDataSourcesConvertor.h  CYamlDataSourcesConvertor.hpp  Command.cpp  Command.h  Common.cpp  Common.h  Config.cmake.in  Core.cpp  Core.h  Core.hpp  DaggyCore.cpp  DaggyCore.h  DataSource.cpp  DataSource.h  DataSource.hpp  Errors.cpp  Errors.h  Errors.hpp  IDataAggregator.cpp  IDataAggregator.h  IDataAggregator.hpp  IDataProvider.cpp  IDataProvider.h  (+36 more)
src/DaggyCore/aggregators/: CCallback.cpp  CCallback.hpp  CConsole.cpp  CConsole.hpp  CFile.cpp  CFile.hpp  IAggregator.cpp  IAggregator.hpp
src/DaggyCore/providers/: CLocal.cpp  CLocal.hpp  CLocalFabric.cpp  CLocalFabric.hpp  CSsh.cpp  CSsh.hpp  CSsh2.cpp  CSsh2.hpp  CSsh2Fabric.cpp  CSsh2Fabric.hpp  CSshFabric.cpp  CSshFabric.hpp  IFabric.cpp  IFabric.hpp  IProvider.cpp  IProvider.hpp
src/DaggyCore/providers/ssh2/: Ssh2Channel.cpp  Ssh2Channel.hpp  Ssh2Client.cpp  Ssh2Client.hpp  Ssh2Debug.cpp  Ssh2Debug.hpp  Ssh2Process.cpp  Ssh2Process.hpp  Ssh2Types.cpp  Ssh2Types.hpp
src/DaggyCore/tests/interface/: CMakeLists.txt
src/DaggyCore/tests/interface/testc/: CMakeLists.txt  test.c
src/DaggyCore/tests/interface/testcpp/: CMakeLists.txt  test.cpp
src/DaggyCore/tests/local/: CMakeLists.txt  DaggyCoreLocalTests.cpp  DaggyCoreLocalTests.h  Precompiled.h  main.cpp
src/DaggyCore/tests/pingpong/: CMakeLists.txt  Precompiled.h  main.cpp
src/cmake/: compiler.cmake  installer.qss  installscript.js  installscript.js.in  installscript.qs  metabin.cmake  pack.cmake  package_deps.cmake  rpath.cmake  rpath_bin.cmake  rpath_lib.cmake  version.c.in  version.cmake  version.h.in  version.rc.in  version_meta.cmake  versionh.cmake  versionmeta.cmake
src/desc/: package_description.txt  readme.txt  welcome.txt
src/docs/: README.md
src/docs/daggy-core/: README.md
src/icons/: daggy.icns
(+93 files in other folders)
